--- a/templates/team_mode.html
+++ b/templates/team_mode.html
@@ -5,7 +5,7 @@
 {% block content %}
 	<main>
 		<div class="container">
-			<section>
+			<section class="mx-3">
 				<div class="d-flex justify-content-end">
 					<a href="{{ url_for('home_view') }}">
 						<button class="btn btn-info">
