--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% block content %}
 	<main>
 		<div class="container">
-			<section>
+			<section class="mx-3">
 				<!-- Messages Template Included -->
 				<div class="d-flex justify-content-end">
 					<a href="{{ url_for('team_mode') }}">
