randomize button reverted temporarily

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,12 +21,12 @@
 				    	<span aria-hidden="true">&times;</span>
 				  	</button> -->
 				</div>
-		 		<div id="update" class="text-center alert alert-success flash alert-dismissible fade show" role="alert">
+		 		<!-- <div id="update" class="text-center alert alert-success flash alert-dismissible fade show" role="alert">
                     <a class="alert-link">UPD (July 23, 2020):</a> <a class="alert-link"><i class="fas fa-random"></i> Randomize</a> button has been added at the <a class="alert-link">end of each section</a> in <a class="alert-link"><i class="fab fa-autoprefixer"></i> All Problemset Recommender</a>.
 				    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
 				    	<span aria-hidden="true">&times;</span>
 				  	</button>
-				</div>
+				</div> -->
 				<div id="update" class="text-center alert alert-info flash alert-dismissible fade show" role="alert">
 				    <a class="alert-link">UPD (July 19, 2020):</a> Try new <a class="alert-link">Unattempted Problem Recommender</a> by Entering your <a class="alert-link">handle</a> and then selecting <a class="alert-link"><i class="fas fa-registered"></i> Recommended Problems</a>.
 				    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
