--- a/templates/home.html
+++ b/templates/home.html
@@ -21,12 +21,12 @@
 				    	<span aria-hidden="true">&times;</span>
 				  	</button> -->
 				</div>
-		 		<!-- <div id="update" class="text-center alert alert-success flash alert-dismissible fade show" role="alert">
-                    <a class="alert-link">UPD (July 23, 2020):</a> <a class="alert-link"><i class="fas fa-random"></i> Randomize</a> button has been added at the <a class="alert-link">end of each section</a> in <a class="alert-link"><i class="fab fa-autoprefixer"></i> All Problemset Recommender</a>.
+                <div id="update" class="text-center alert alert-success flash alert-dismissible fade show" role="alert">
+                    <a class="alert-link">UPD (July 24, 2020):</a> <a class="alert-link"><i class="fas fa-random"></i> Randomize</a> button has been added at the <a class="alert-link">end of each section</a> in <a class="alert-link"><i class="fab fa-autoprefixer"></i> All Problemset Recommender</a>.
 				    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
 				    	<span aria-hidden="true">&times;</span>
 				  	</button>
-				</div> -->
+				</div>
 				<div id="update" class="text-center alert alert-info flash alert-dismissible fade show" role="alert">
 				    <a class="alert-link">UPD (July 19, 2020):</a> Try new <a class="alert-link">Unattempted Problem Recommender</a> by Entering your <a class="alert-link">handle</a> and then selecting <a class="alert-link"><i class="fas fa-registered"></i> Recommended Problems</a>.
 				    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -148,4 +148,39 @@
 			</section>
 		</div>
 	</main>
+{% endblock %}
+{% block javascript %}
+    <script>
+        {% if recommended_problems %}
+            $('.classRecommendedByProblemsetRandom').click(function (e) {
+                let _this = $(this);
+                let category = _this.attr('category');
+                let problems = {{ recommended_problems.rp_all | safe }};
+                // console.log(problems);
+                let problemDivId = `#idRecommenderByContestProblems-${category}`;
+                let problemDiv = $(problemDivId);
+                console.log(`Randomize is clicked for category ${category}.`);
+                let problemCategory = problems[category];
+                let totalProblems = problemCategory.length;
+                let arr = [];
+                while(arr.length < 10){
+                    let r = Math.floor(Math.random() * totalProblems);
+                    if(arr.indexOf(r) === -1) arr.push(r);
+                }
+                arr.sort((a,b)=>a-b); // Sorting Numerically
+                let toAppend = "";
+                for(let i = 0; i < 10; ++i) {
+                    let problem = problemCategory[arr[i]], temp;
+                    if(category !== '6') {
+                        temp = `<p><b><a class="text-info" href="${problem[2]}" target="_blank">${problem[0]} - ${problem[1]} (Rating: ${problem[3]})</a></b><p>`;
+                    } else {
+                        temp = `<p><b><a class="text-info" href="${problem[2]}" target="_blank">${problem[0]} - ${problem[1]}</a></b><p>`;
+                    }
+                    toAppend += temp;
+                }
+                problemDiv.html(toAppend);
+                return false;
+            });
+        {% endif %}
+    </script>
 {% endblock %}
