randomize working fine as of now

--- a/templates/home.html
+++ b/templates/home.html
@@ -159,7 +159,7 @@
                 // console.log(problems);
                 let problemDivId = `#idRecommenderByContestProblems-${category}`;
                 let problemDiv = $(problemDivId);
-                console.log(`Randomize is clicked for category ${category}.`);
+                {#console.log(`Randomize is clicked for category ${category}.`);#}
                 let problemCategory = problems[category];
                 let totalProblems = problemCategory.length;
                 let arr = [];
