--- a/templates/team_mode.html
+++ b/templates/team_mode.html
@@ -167,3 +167,39 @@
 		</div>
 	</main>
 {% endblock %}
+
+{% block javascript %}
+    <script>
+        {% if recommended_problems %}
+            $('.classRecommendedByProblemsetRandom').click(function (e) {
+                let _this = $(this);
+                let category = _this.attr('category');
+                let problems = {{ recommended_problems.rp_all | safe }};
+                // console.log(problems);
+                let problemDivId = `#idRecommenderByContestProblems-${category}`;
+                let problemDiv = $(problemDivId);
+                {#console.log(`Randomize is clicked for category ${category}.`);#}
+                let problemCategory = problems[category];
+                let totalProblems = problemCategory.length;
+                let arr = [];
+                while(arr.length < 10){
+                    let r = Math.floor(Math.random() * totalProblems);
+                    if(arr.indexOf(r) === -1) arr.push(r);
+                }
+                arr.sort((a,b)=>a-b); // Sorting Numerically
+                let toAppend = "";
+                for(let i = 0; i < 10; ++i) {
+                    let problem = problemCategory[arr[i]], temp;
+                    if(category !== '6') {
+                        temp = `<p><b><a class="text-info" href="${problem[2]}" target="_blank">${problem[0]} - ${problem[1]} (Rating: ${problem[3]})</a></b><p>`;
+                    } else {
+                        temp = `<p><b><a class="text-info" href="${problem[2]}" target="_blank">${problem[0]} - ${problem[1]}</a></b><p>`;
+                    }
+                    toAppend += temp;
+                }
+                problemDiv.html(toAppend);
+                return false;
+            });
+        {% endif %}
+    </script>
+{% endblock %}
